# echo

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/: RESUME_BULLETS.md  architecture.md  design.md
docs/adr/: 0001-vector-store.md  0002-streamlit-ui.md  0003-recommender-architecture.md
infra/helm/echomind/: Chart.yaml  values.yaml
infra/helm/echomind/templates/: _helpers.tpl  api.yaml  config.yaml
infra/k8s/: api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  qdrant-statefulset.yaml  redis-deployment.yaml  secret.yaml  ui-deployment.yaml  worker-deployment.yaml
notebooks/: 01_ingestion_demo.ipynb  02_embeddings_eval.ipynb  03_recommender_training.ipynb
pipelines/: ingest_dag.py
scripts/: benchmark.py  seed_data.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/echomind_api/: __init__.py  deps.py  main.py  metrics.py  middleware.py
services/api/echomind_api/routes/: books.py  health.py  qa.py  recommend.py  search.py  sentiment.py  upload.py  voice_match.py
services/ui/: Dockerfile  README.md  pyproject.toml
services/ui/echomind_ui/: __init__.py  api_client.py  app.py
services/ui/echomind_ui/pages/: 1_Search.py  2_QA.py  3_Voice_Match.py  4_Sentiment_Arc.py  5_Recommend.py  6_Upload.py
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/echomind_worker/: __init__.py  cli.py  ingest.py  watcher.py
tests/: conftest.py  test_api_books.py  test_api_health.py  test_api_qa.py  test_api_search.py  test_core_audio.py  test_core_db.py  test_core_schemas.py  test_ml_chapter_seg.py  test_ml_llm.py  test_ml_recommender.py  test_ml_sentiment.py
