[project]
name = "echomind"
version = "0.1.0"
description = "End-to-end AI/ML platform for audiobook intelligence: transcription, semantic search, recommendations, and RAG-based Q&A."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EchoMind contributors" }]
keywords = ["machine-learning", "audio", "whisper", "rag", "embeddings", "recommender", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "echomind-core",
    "echomind-ml",
    "echomind-api",
    "echomind-worker",
    "echomind-ui",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/ml",
    "services/api",
    "services/worker",
    "services/ui",
]

[tool.uv.sources]
echomind-core = { workspace = true }
echomind-ml = { workspace = true }
echomind-api = { workspace = true }
echomind-worker = { workspace = true }
echomind-ui = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # handled by line-length

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["notebooks", "data", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=packages --cov=services --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring services",
    "gpu: marks tests requiring a GPU",
]

[tool.coverage.run]
branch = true
source = ["packages", "services"]
omit = ["*/tests/*", "*/__init__.py"]
