[project]
name = "echomind-api"
version = "0.1.0"
description = "FastAPI service for EchoMind."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "echomind-core",
    "echomind-ml",
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echomind_api"]
