[project]
name = "echomind-ui"
version = "0.1.0"
description = "Streamlit UI for EchoMind."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "echomind-core",
    "streamlit>=1.36",
    "httpx>=0.27",
    "plotly>=5.22",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echomind_ui"]
