[project]
name = "echomind-worker"
version = "0.1.0"
description = "Batch ingestion worker for EchoMind."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "echomind-core",
    "echomind-ml",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
echomind-worker = "echomind_worker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["echomind_worker"]
